# libEMF

./: Makefile  README.md
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
src/config/: config.h.in  mkinstalldirs
src/doc/: Makefile.am  Makefile.in
src/include/: Makefile.am  Makefile.in
src/include/libEMF/: Makefile.am  Makefile.in
src/libemf/: Makefile.am  Makefile.in  libemf.cpp  libemf.h
src/src/: Makefile.am  Makefile.in  printemf.c
src/tests/: Makefile.am  Makefile.in  check1.c  check2.c  check3.c  docheck1  docheck2  docheck3  example1.c  example2.c
src/tests/emfs/: check1.emf
