## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2002, 2003 lignum Computing, Inc. <libemf@lignumcomputing.com>
## $Id: Makefile.am,v 1.3 2003/01/14 03:49:03 allen Exp $
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 30, Boston, MA 02111-1307, USA.

INCLUDES = -I$(top_srcdir)/include
check_PROGRAMS = check1 check2 check3 example1 example2
LDADD = $(top_builddir)/libemf/libEMF.la -lstdc++

TESTS = docheck1 docheck2 docheck3

EXTRA_DIST = docheck1 docheck2 docheck3 emfs/check1.emf emfs/check3.emf

MOSTLYCLEANFILES = check1.emf check2.emf check3.emf
